--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -1,3 +1,28 @@
 knpu_oauth2_client:
     clients:
         # configure your clients as described here: https://github.com/knpuniversity/oauth2-client-bundle#configuration
+
+        # will create service: "knpu.oauth2.client.keycloak"
+        # an instance of: KnpU\OAuth2ClientBundle\Client\Provider\KeycloakClient
+        # composer require stevenmaguire/oauth2-keycloak
+        keycloak:
+            type: keycloak
+            # Keycloak server URL
+            auth_server_url: '%env(KEYCLOAK_APP_URL)%'
+            # Keycloak realm
+            realm: '%env(KEYCLOAK_REALM)%'
+            client_id: '%env(KEYCLOAK_CLIENTID)%'
+            client_secret: '%env(KEYCLOAK_SECRET)%'
+            redirect_route: 'oauth_check'
+            redirect_params: {}
+            # Optional: Encryption algorith, i.e. RS256
+            # encryption_algorithm: null
+            # Optional: Encryption key path, i.e. ../key.pem
+            # encryption_key_path: null
+            # Optional: Encryption key, i.e. contents of key or certificate
+            # encryption_key: null
+            # Optional: The keycloak version to run against
+            version: '20.0.3'
+            # whether to check OAuth2 "state": defaults to true
+            # use_state: true
+
