--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,6 +32,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin/login, roles: PUBLIC_ACCESS }
+        - { path: ^/oauth/callback, roles: PUBLIC_ACCESS }
+        - { path: ^/oauth/login, roles: PUBLIC_ACCESS }
         - { path: ^/dashboard, roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
